Search  munis by state

--- a/FormSearch/Gemfile
+++ b/FormSearch/Gemfile
@@ -26,6 +26,10 @@ gem 'acts_as_votable', '~> 0.10.0'
 gem 'devise'
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
+gem "therubyracer"
+gem "less-rails" #Sprockets (what Rails 3.1 uses for its asset pipeline) supports LESS
+gem "twitter-bootstrap-rails"
+gem 'screencap'
 
 # Use Unicorn as the app server
 # gem 'unicorn'
